# embodied-care-ai-lab

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark_prompt.md  evaluator_rule.md
.github/workflows/: ci.yml
data/: README.md
data/benchmark_prompts/: womens_health_en.jsonl  womens_health_sv.jsonl
docs/: benchmark_design.md  ethical_scope.md  project_vision.md  research_log.md  roadmap.md
examples/: run_mock_benchmark.sh  sample_report.md
src/embodied_care_ai/: __init__.py  cli.py  dataset.py  schemas.py
src/embodied_care_ai/evaluators/: __init__.py  safety_rules.py  scoring.py
src/embodied_care_ai/model_adapters/: __init__.py  base.py  mock.py  openai_compatible.py
src/embodied_care_ai/reports/: __init__.py  markdown.py
tests/: test_cli.py  test_dataset.py  test_model_adapters.py  test_openai_compatible_adapter.py  test_reports.py  test_safety_rules.py  test_schemas.py  test_scoring.py
